Initial web page

--- a/index.html
+++ b/index.html
@@ -1,57 +1,47 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
+<head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="vis.js : Dynamic, browser-based visualization library" />
+    <meta name="description" content="vis.js : dynamic, browser-based visualization library" />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <title>vis.js</title>
-  </head>
+    <title>vis.js | dynamic, browser-based visualization library</title>
+</head>
 
-  <body>
+<body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/almende/vis">View on GitHub</a>
+<div id="container">
+    <h1>vis.js</h1>
 
-          <h1 id="project_title">vis.js</h1>
-          <h2 id="project_tagline">Dynamic, browser-based visualization library</h2>
+    <p>
+        Vis.js is a dynamic, browser based visualization library.
+        The library is designed to be easy to use, to handle large amounts
+        of dynamic data, and to enable manipulation of the data.
+        The library consists of a Timeline, LineChart, LineChart3d, Graph, and Treegrid.
+    </p>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/almende/vis/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/almende/vis/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+    <p>
+        Vis.js Library is part of <a href="http://chap.almende.com">CHAP</a>,
+        the Common Hybrid Agent Platform, developed by <a href="http://almende.com">Almende B.V</a>.
+        It is the successor of the <a href="https://github.com/almende/chap-links-library">CHAP Links Library</a>.
+    </p>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>vis.js</h1>
+    <p>
+        The source code of vis.js is available on github:
+        <a href="https://github.com/almende/vis" target="_blank">https://github.com/almende/vis</a>
+    </p>
 
-<p>Vis.js is a dynamic, browser based visualization library.
-The library is designed to be easy to use, to handle large amounts
-of dynamic data, and to enable manipulation of the data.
-The library consists of Timeline, LineChart, LineChart3d, Graph, and Treegrid.</p>
+    <p style="font-style: italic;">
+        Coming soon...
+    </p>
+</div>
 
-<p>vis.js Library is part of <a href="http://chap.almende.com">CHAP</a>,
-the Common Hybrid Agent Platform, developed by <a href="http://almende.com">Almende B.V</a>.</p>
-      </section>
-    </div>
+<a id="forkme" href="https://github.com/almende/vis/" target="_blank">
+    <img src="img/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" >
+</a>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">vis.js maintained by <a href="https://github.com/almende">almende</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+</body>
 </html>
