--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="vis.js : dynamic, browser-based visualization library" />
+    <meta name="title" content="vis.js">
+    <meta name="description" content="vis.js is a dynamic, browser-based visualization library" />
+    <meta name="keywords" content="vis, visualization, javascript, browser based, web based, chart, linechart, timeline, graph, network, browser" />
+    <meta name="author" content="Almende B.V.">
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
