--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="title" content="vis.js">
     <meta name="description" content="vis.js is a dynamic, browser-based visualization library" />
     <meta name="keywords" content="vis, visualization, javascript, browser based, web based, chart, linechart, timeline, graph, network, browser" />
@@ -16,30 +15,66 @@
 
 <body>
 
+
 <div id="container">
-    <h1>vis.js</h1>
 
-    <p>
-        Vis.js is a dynamic, browser based visualization library.
-        The library is designed to be easy to use, to handle large amounts
-        of dynamic data, and to enable manipulation of the data.
-        The library consists of a Timeline, LineChart, LineChart3d, Graph, and Treegrid.
-    </p>
+    <div id="menu">
+        <div id="menu-inner">
 
-    <p>
-        Vis.js Library is part of <a href="http://chap.almende.com">CHAP</a>,
-        the Common Hybrid Agent Platform, developed by <a href="http://almende.com">Almende B.V</a>.
-        It is the successor of the <a href="https://github.com/almende/chap-links-library">CHAP Links Library</a>.
-    </p>
+            <a href="http://visjs.org/"><img src="img/logo/vis128.png" alt="logo"></a>
+            <br>
+<!-- TODO: menu
+            <div class="nav">
+                <ul>
+                    <li>
+                        Vis
+                        <ul>
+                            <li><a class="nav" href="index.html">Overview</a></li>
+                            <li><a class="nav" href="downloads.html">Downloads</a></li>
+                        </ul>
+                    </li>
 
-    <p>
-        The source code of vis.js is available on github:
-        <a href="https://github.com/almende/vis" target="_blank">https://github.com/almende/vis</a>
-    </p>
+                    <li>
+                        Components
+                        <ul>
+                            <li><a class="nav" href="graph.html">Graph</a></li>
+                            <li><a class="nav" href="graph3d.html">Graph3D</a></li>
+                            <li><a class="nav" href="network.html">Network</a></li>
+                            <li><a class="nav" href="timeline.html">Timeline</a></li>
+                            <li><a class="nav" href="treegrid.html">TreeGrid</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+-->
+        </div>
+    </div>
 
-    <p style="font-style: italic;">
-        Coming soon...
-    </p>
+    <div id="contents">
+        <h1>vis.js</h1>
+
+        <p>
+            Vis.js is a dynamic, browser based visualization library.
+            The library is designed to be easy to use, to handle large amounts
+            of dynamic data, and to enable manipulation of the data.
+            The library consists of a Timeline, LineChart, LineChart3d, Graph, and Treegrid.
+        </p>
+
+        <p>
+            Vis.js Library is part of <a href="http://chap.almende.com" target="_blank">CHAP</a>,
+            the Common Hybrid Agent Platform, developed by <a href="http://almende.com" target="_blank">Almende B.V</a>.
+            It is the successor of the <a href="https://github.com/almende/chap-links-library" target="_blank">CHAP Links Library</a>.
+        </p>
+
+        <p>
+            The source code of vis.js is available on github:
+            <a href="https://github.com/almende/vis" target="_blank">https://github.com/almende/vis</a>
+        </p>
+
+        <p style="font-style: italic;">
+            Coming soon...
+        </p>
+    </div>
 </div>
 
 <a id="forkme" href="https://github.com/almende/vis/" target="_blank">
