--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
             Vis.js is a dynamic, browser based visualization library.
             The library is designed to be easy to use, to handle large amounts
             of dynamic data, and to enable manipulation of the data.
-            The library consists of a Timeline, LineChart, LineChart3d, Graph, and Treegrid.
+            The library consists of the components Timeline, LineChart,
+            LineChart3d, Graph, and TreeGrid.
         </p>
 
         <p>
