--- a/index.html
+++ b/index.html
@@ -50,30 +50,45 @@
     <h2 id="install">Install</h2>
 
     <h3>npm</h3>
-    Install via npm:
 
 <pre class="prettyprint">
 npm install vis
 </pre>
 
     <h3>bower</h3>
-    Install via bower:
 
 <pre class="prettyprint">
 bower install vis
 </pre>
 
     <h3>download</h3>
-    Or download the library from the github project:
-    <a href="https://github.com/almende/vis.git" target="_blank">https://github.com/almende/vis.git</a>.
+
+    <table class="download">
+        <tr>
+            <td>
+                <a href="vis.js" target="_blank">Development
+                    (version <span class="version">0.0.9</span>)</a>
+            </td>
+            <td>
+                <span id="development-size">372 kB</span>, uncompressed with comments
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <a href="vis.min.js" target="_blank">Production
+                    (version <span class="version">0.0.9</span>)</a>
+            </td>
+            <td>
+                <span id="production-size">33 kB</span>, minified and gzipped
+            </td>
+        </tr>
+    </table>
+
 
     <h2 id="example">Example</h2>
 
     <p>
         A basic example demonstrating how to use the vis.js timeline is shown below.
-    </p>
-
-    <p>
         More examples can be found in the
         <a href="examples" target="_blank">examples directory</a>.
     </p>
@@ -112,8 +127,14 @@ bower install vis
 
 
     <h2 id="gallery">Gallery</h2>
+    This gallery gives an idea of the features and possibilities of the library.
+    The source code of the examples can be found in the
+    <a href="https://github.com/almende/vis/tree/master/examples" target="_blank">examples directory</a>.
 
     <h3 id="timeline">Timeline</h3>
+    <p>
+        The timeline from vis.js displays different types of data on a timeline.
+    </p>
     <div class="gallery">
         <div class="thumb">
             <a href="examples/timeline/01_basic.html">
@@ -148,6 +169,10 @@ bower install vis
     </div>
 
     <h3 id="graph">Graph</h3>
+    <p>
+        The graph from vis.js visualizes graphs and networks with
+        customizable styles.
+    </p>
 
     <div class="gallery">
         <div class="thumb">
