--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@ bower install vis
 
     <p>
         A basic example demonstrating how to use the vis.js timeline is shown below.
-        More examples can be found in the
-        <a href="examples" target="_blank">examples directory</a>.
+        See the <a href="#gallery">gallery</a> below for more examples.
     </p>
 
 <pre class="prettyprint lang-html">&lt;!doctype html&gt;
