--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="#install">Install</a></li>
                 <li><a href="#example">Example</a></li>
                 <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#docs">Docs</a></li>
+                <li><a href="docs/index.html" target="_blank">Docs</a></li>
                 <li><a href="#license">License</a></li>
             </ul>
         </div>
@@ -67,19 +67,19 @@ bower install vis
         <tr>
             <td>
                 <a href="vis.js" target="_blank">Development
-                    (version <span class="version">0.0.9</span>)</a>
+                    (version <span class="version">0.1.0</span>)</a>
             </td>
             <td>
-                <span id="development-size">372 kB</span>, uncompressed with comments
+                <span id="development-size">384 kB</span>, uncompressed with comments
             </td>
         </tr>
         <tr>
             <td>
                 <a href="vis.min.js" target="_blank">Production
-                    (version <span class="version">0.0.9</span>)</a>
+                    (version <span class="version">0.1.0</span>)</a>
             </td>
             <td>
-                <span id="production-size">33 kB</span>, minified and gzipped
+                <span id="production-size">34 kB</span>, minified and gzipped
             </td>
         </tr>
     </table>
@@ -275,14 +275,9 @@ bower install vis
     <h2 id="docs">Docs</h2>
 
     <p>
-        The following documentation is available:
+        Documentation is available here:
+        <a href="docs/index.html" target="_blank">Documentation</a>
     </p>
-    <ul>
-        <li><a href="https://github.com/almende/vis#readme" target="_blank">Introduction</a></li>
-        <li><a href="docs/dataset.html" target="_blank">DataSet</a></li>
-        <li><a href="docs/graph.html" target="_blank">Graph</a></li>
-        <li><a href="docs/timeline.html" target="_blank">Timeline</a></li>
-    </ul>
 
 
     <h2 id="license">License</h2>
