--- a/index.html
+++ b/index.html
@@ -265,6 +265,12 @@ bower install vis
             </a>
         </div>
         <div class="thumb">
+            <a href="examples/graph/16_dynamic_data.html">
+                <img src="img/gallery/graph/16_dynamic_data.png">
+                <div>dynamic data</div>
+            </a>
+        </div>
+        <div class="thumb">
             <a href="examples/graph/graphviz/graphviz_gallery.html">
                 <img src="img/gallery/graph/graphviz_gallery.png">
                 <div>graphviz gallery</div>
