Added an other example and some minor style improvements

--- a/index.html
+++ b/index.html
@@ -28,22 +28,31 @@
                 <li><a href="#install">Install</a></li>
                 <li><a href="#example">Example</a></li>
                 <li><a href="#gallery">Gallery</a></li>
-                <li><a href="docs/index.html" target="_blank">Docs</a></li>
+                <li>
+                    <a href="docs/index.html" target="_blank">
+                        Docs
+                        <img src="img/external-link-icons/external-link-icon.png" style="vertical-align: text-top;" title="Docs will open in a new window">
+                    </a>
+                </li>
                 <li><a href="#license">License</a></li>
             </ul>
         </div>
     </div>
 
-    <h1>vis.js</h1>
+    <h1>
+        vis.js<br>
+        <span class="subtitle">a visual interaction system</span>
+    </h1>
 
     <p>
         Vis.js is a dynamic, browser based visualization library.
         The library is designed to be easy to use, to handle large amounts
-        of dynamic data, and to enable manipulation of the data.
+        of dynamic data, and to enable manipulation of and interaction with the data.
         The library consists of the components DataSet, Timeline, and Graph.
     </p>
     <p>
-        The vis.js library is developed by <a href="http://almende.com" target="_blank">Almende B.V</a>.
+        The vis.js library is developed by <a href="http://almende.com" target="_blank">Almende B.V</a>,
+        as part of the <a href="http://chap.almende.com/" target="_blank">CHAP</a>.
     </p>
 
 
@@ -268,6 +277,12 @@ bower install vis
             <a href="examples/graph/16_dynamic_data.html">
                 <img src="img/gallery/graph/16_dynamic_data.png">
                 <div>dynamic data</div>
+            </a>
+        </div>
+        <div class="thumb">
+            <a href="examples/graph/17_network_info.html">
+                <img src="img/gallery/graph/17_network_info.png">
+                <div>network info</div>
             </a>
         </div>
         <div class="thumb">
