--- a/test/timeline.html
+++ b/test/timeline.html
@@ -66,7 +66,7 @@
   });
   items.add([
     {_id: 0, content: 'item 0', start: now.clone().add('days', 3).toDate(), title: 'hello title!'},
-    {_id: 1, content: 'item 1<br>start', start: now.clone().add('days', 4).toDate()},
+    {_id: '1', content: 'item 1<br>start', start: now.clone().add('days', 4).toDate()},
     {_id: 2, content: 'item 2', start: now.clone().add('days', -2).toDate() },
     {_id: 3, content: 'item 3', start: now.clone().add('days', 2).toDate()},
     {
