--- a/test/timeline.html
+++ b/test/timeline.html
@@ -3,6 +3,10 @@
 <head>
   <title></title>
   <script src="../node_modules/moment/moment.js"></script>
+  <script src="../node_modules/moment/lang/nl.js"></script>
+  <script>
+    moment.lang('nl');
+  </script>
   <script src="../dist/vis.js"></script>
   <link href="../dist/vis.css" rel="stylesheet" type="text/css" />
 
