fixed pointdrawing with new barchart functionality

--- a/examples/graph2d/11_barsSideBySideGroups.html
+++ b/examples/graph2d/11_barsSideBySideGroups.html
@@ -67,7 +67,7 @@ var options = {
     var options = {
         style:'bar',
         barChart: {width:50, align:'center'}, // align: left, center, right
-        drawPoints: false,
+        drawPoints: true,
         dataAxis: {
             icons:true
         },
