--- a/test/timeline.html
+++ b/test/timeline.html
@@ -3,7 +3,7 @@
 <head>
   <title></title>
   <script src="../node_modules/moment/moment.js"></script>
-  <script src="../node_modules/moment/lang/nl.js"></script>
+  <script src="../node_modules/moment/locale/nl.js"></script>
   <script>
     moment.lang('nl');
   </script>
@@ -93,11 +93,11 @@
     //height: 200,
     showCurrentTime: true,
     showCustomTime: true,
+    //clickToUse: true,
     //min: moment('2013-01-01'),
     //max: moment('2013-12-31'),
     //zoomMin: 1000 * 60 * 60 * 24,            // 1 day
-    zoomMax: 1000 * 60 * 60 * 24 * 30 * 6,    // 6 months
-    clickToUse: true
+    zoomMax: 1000 * 60 * 60 * 24 * 30 * 6     // 6 months
   };
 
   console.timeEnd('create dataset');
