--- a/test/timeline_groups.html
+++ b/test/timeline_groups.html
@@ -51,7 +51,7 @@
   var names = ['John (0)', 'Alston (1)', 'Lee (2)', 'Grant (3)'];
   var groups = new vis.DataSet();
   for (var g = 0; g < groupCount; g++) {
-    groups.add({id: g, content: names[g], title: 'Title of group ' + g});
+    groups.add({id: g, content: names[g], title: 'Title of group ' + g, 'className': 'myGroup'});
   }
 
   // create a dataset with items
@@ -66,7 +66,8 @@
           ' <span style="color:#97B0F8;">(' + names[group] + ')</span>',
       start: start,
       title: 'Title for item ' + i,
-      type: 'box'
+      type: 'box',
+      className: 'myItem'
     });
   }
 
