--- a/test/timeline_groups.html
+++ b/test/timeline_groups.html
@@ -15,9 +15,6 @@
     }
   </style>
 
-  <!-- note: moment.js must be loaded before vis.js, else vis.js uses its embedded version of moment.js -->
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.1/moment.min.js"></script>
-
   <script src="../dist/vis.js"></script>
   <link href="../dist/vis.css" rel="stylesheet" type="text/css" />
 </head>
@@ -43,6 +40,8 @@
 <div id="visualization"></div>
 
 <script>
+  var moment = vis.moment;
+
   var now = moment().minutes(0).seconds(0).milliseconds(0);
   var groupCount = 3;
   var itemCount = 20;
